################################################################################
#                           Standard Stuff
################################################################################
AC_INIT(MOAB, 1.1)
AC_CANONICAL_SYSTEM
AM_INIT_AUTOMAKE(MOAB,1.1)

SNL_CHECK_COMPILERS
AM_CONDITIONAL(PARALLEL,[test "x$WITH_MPI" != "xno"])
LIBS="-lm"

AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_DISABLE_SHARED
AC_PROG_LIBTOOL

AC_CHECK_PROG([ZCAT],[gunzip],[gunzip -c],[])
AC_CHECK_PROG([ZCAT],[gzip],[gzip -cd],[])
AC_CHECK_PROG([ZCAT],[zcat],[zcat],[])
if test "x" = "x$ZCAT"; then
  AC_MSG_WARN([[Cannot run tests: no way to uncompress input files.]])
fi
AC_SUBST([ZCAT])
AM_CONDITIONAL([HAVE_ZCAT],[test "x" = "x$ZCAT"])

################################################################################
#                             BOOST OPTIONS
################################################################################

dnl SNL_CHECK_BOOST( [boost/pool/object_pool.hpp] )

################################################################################
#                              MPI OPTIONS
################################################################################

if test "x$WITH_MPI" != "xno"; then
  DEFINES="$DEFINES -DUSE_MPI"
fi
AM_CONDITIONAL(USE_MPI, [test "xno" != "x$WITH_MPI"])

################################################################################
#                              HDF5 OPTIONS
################################################################################

SNL_CHECK_HDF5
if test "xno" == "x$HAVE_HDF5"; then
  AC_MSG_WARN([Support for native HDF5 file format disabled])
else
  DEFINES="$DEFINES -DHDF5_FILE"
fi
AM_CONDITIONAL(HDF5_FILE, [test "xno" != "x$HAVE_HDF5"])


################################################################################
#                             NetCDF OPTIONS
################################################################################

SNL_CHECK_NETCDF
if test "xno" == "x$HAVE_NETCDF"; then
  AC_MSG_WARN([Support for ExodusII file format disabled])
else
  DEFINES="$DEFINES -DNETCDF_FILE"
fi
AM_CONDITIONAL(NETCDF_FILE, [test "xno" != "x$HAVE_NETCDF"])


#################################################################################
#                             Documentation
#################################################################################
AC_ARG_ENABLE([doxygen],
[AC_HELP_STRING([[--enable-doxygen(=DIR)]],[Specify directory where Doxygen program is installed])
AC_HELP_STRING([--disable-doxygen],[Do not generate API documentation (default)])],
                        [ENABLE_DOXYGEN="$enableval"],[ENABLE_DOXYGEN=no] )
if test "x$ENABLE_DOXYGEN" = "xyes"; then
  AC_PATH_PROG( [DOXYGEN], [doxygen], [no] )
elif test "x$ENABLE_DOXYGEN" != "xno"; then
  AC_PATH_PROG( [DOXYGEN], [doxygen], [no], [$ENABLE_DOXYGEN] )
fi
if test "x$ENABLE_DOXYGEN" != "xno"; then
  if test "x$DOXYGEN" = "xno"; then
    AC_MSG_ERROR("Doxygen executable not found.")
  fi
fi
AC_SUBST([DOXYGEN])
AM_CONDITIONAL([ENABLE_DOXYGEN],[test "x$ENABLE_DOXYGEN" != "xno"])



###############################################################################
#                           Optional Tools
###############################################################################
  # Define a macro to avoid typing this for each individual tool
  # Usage: MB_OPTIOANL_TOOL( name, default )
  #  name      - name of option
  #  default   - yes/no, $ENABLE_TOOLS overrides this if set
  # Actions:
  #  sets ENABLE_${tool} to 'yes' or 'no'
  #  creates ENABLE_${tool} automake conditional
AC_DEFUN([MB_OPTIONAL_TOOL],[
  mb_default_$1=$2
  if test "x" != "x$ENABLE_TOOLS"; then
    mb_default_$1="$ENABLE_TOOLS"
  fi
  AC_ARG_ENABLE( [$1],
[AC_HELP_STRING([--enable-$1],[Build tool: $1])
AC_HELP_STRING([--disable-$1],[Don't build $1])],
                 [ENABLE_$1=$enableval
DISTCHECK_CONFIGURE_FLAGS="$DISTCHECK_CONFIGURE_FLAGS --enable-$1=\"${enableval}\""
],[ENABLE_$1=${mb_default_$1}] )
  AM_CONDITIONAL([ENABLE_$1],[test "x${ENABLE_$1}" != "xno"])
  AC_MSG_CHECKING([if $1 is to be built])
  AC_MSG_RESULT([${ENABLE_$1}])
])
  # The default for all tools
AC_ARG_ENABLE( [tools], [
AC_HELP_STRING([--enable-tools],[Build all tools by default])
AC_HELP_STRING([--disable-tools],[Disable all tools by default])],
                         [ENABLE_TOOLS=$enableval],[ENABLE_TOOLS=] )
  # Individual tools
MB_OPTIONAL_TOOL([mbconvert],                 [yes])
MB_OPTIONAL_TOOL([hexmodops],                 [no] )
MB_OPTIONAL_TOOL([mbchaco],                   [no] )
MB_OPTIONAL_TOOL([mbperf],                    [no] )
MB_OPTIONAL_TOOL([qvdual],                    [no] )
MB_OPTIONAL_TOOL([mbsize],                    [no] )
MB_OPTIONAL_TOOL([mbskin],                    [no] )
MB_OPTIONAL_TOOL([mbtagprop],                 [no] )
MB_OPTIONAL_TOOL([spheredecomp],              [no] )
MB_OPTIONAL_TOOL([mbsurfplot],                [no] )
MB_OPTIONAL_TOOL([mbzoltan],                  [no] )

################################################################################
#                           Zoltan
################################################################################
  AC_ARG_WITH([zoltan], 
   [AC_HELP_STRING([--with-zoltan=DIR],[Specify directory containing Zoltan])],
   [ZOLTAN_DIR="$withval"
    DISTCHECK_CONFIGURE_FLAGS="$DISTCHECK_CONFIGURE_FLAGS --with-zoltan=\"${withval}\""
   ],[ZOLTAN_DIR=unknown])
  AC_SUBST(ZOLTAN_DIR)
  AC_ARG_WITH([zoltan-arch],
   [AC_HELP_STRING([--with-zoltan-arch=OS],[Specify zoltan architecture])],
   [ZOLTAN_ARCH="$withval"],[ZOLTAN_ARCH=unknown])
  AC_SUBST(ZOLTAN_ARCH)

################################################################################
#                           Chaco
################################################################################
if test $ENABLE_mbchaco = yes; then
  AC_ARG_WITH(chaco, 
  [AC_HELP_STRING([--with-chaco=DIR], [Specify directory containing chaco source and library])],
  [CHACO_DIR=$withval
   DISTCHECK_CONFIGURE_FLAGS="$DISTCHECK_CONFIGURE_FLAGS --with-chaco=\"${withval}\""
   ], [CHACO_DIR=])
  case "x$CHACO_DIR" in
    xno|x)
      CHACO_MISSING=yes
      ;;
    xyes)
      AC_MSG_ERROR([--with-chaco requires and argument])
      ;;
  esac
  if ! test -d "$CHACO_DIR"; then
    AC_MSG_WARN([$CHACO_DIR : not a directory.])
  fi
  AC_CHECK_FILES([${CHACO_DIR}/code/main/defs.h ${CHACO_DIR}/code/main/params.h],
                [], [AC_MSG_WARN([$CHACO_DIR : not a valid chaco source]); CHACO_MISSING=yes])
  old_LIBS="$LIBS"
  LIBS="-L${CHACO_DIR}/code"
  AC_CHECK_LIB([chaco],[read_params],[],
               [AC_MSG_WARN([Could not find libchaco in ${CHACO_DIR}/code]); CHACO_MISSING=yes],
               [-lm])
  CHACO_INCLUDES="-I${CHACO_DIR}/code/main"
  LIBS="$old_LIBS"
  CHACO_LIBS="-L${CHACO_DIR}/code -lchaco -lm"
  AC_SUBST(CHACO_LIBS)
  AC_SUBST(CHACO_INCLUDES)
fi


################################################################################
#                               qvdual
################################################################################

GRAPHVIZ_MISSING=no
X_MISSING=no
VTK_MISSING=no
QT_MISSING=no

if test $ENABLE_qvdual = yes; then


################################################################################
#                               GraphViz
################################################################################
  AC_ARG_WITH([graphviz],
  [AC_HELP_STRING([--with-graphviz=DIR], [Specify directory containing GraphViz])],
  [GRAPH_DIR=$withval
   DISTCHECK_CONFIGURE_FLAGS="$DISTCHECK_CONFIGURE_FLAGS --with-graphviz=\"${withval}\""
  ],[GRAPH_DIR=])

  case "x$GRAPH_DIR" in
    xno)
      GRAPHVIZ_MISSING=yes
      ;;
    xyes|x)
      GRAPH_INC_DIR=
      GRAPH_DIR=
      for dir in /usr /usr/local; do
        if test "x" = "x$GRAPH_DIR"; then
          AC_CHECK_FILE([${dir}/include/graphviz/dotneato.h],[GRAPH_DIR="$dir"])
        fi
      done
      AC_MSG_CHECKING([for GraphViz include dir])
      if test "x" != x"$GRAPH_DIR"; then
        GRAPH_INC_DIR="-I${GRAPH_DIR}/include/graphviz"
      fi
      AC_MSG_RESULT([$GRAPH_INC_DIR])
      AC_MSG_CHECKING([for GraphViz library dir])
      GRAPH_LIB_DIR=
      for dir in ${GRAPH_DIR}/lib/graphviz /usr/lib/graphviz /usr/local/lib/graphviz /lib/graphviz; do
        if test "x" = "x$GRAPH_LIB_DIR"; then
          if test -d $dir; then
            GRAPH_LIB_DIR=-L$dir
          fi
        fi
      done
      AC_MSG_RESULT([$GRAPH_LIB_DIR])
      ;;
    x?*)
      GRAPH_INC_DIR=
      for dir in ${GRAPH_DIR}/include/graphviz ${GRAPH_DIR}/include ${GRAPH_DIR}; do
        if test "x" = "x$GRAPH_INC_DIR"; then
          AC_CHECK_FILE([${dir}/dotneato.h],[GRAPH_INC_DIR="-I$dir"])
        fi
      done
      AC_MSG_CHECKING([for GraphViz include dir])
      if test "x" = x"$GRAPH_INC_DIR"; then
        AC_MSG_RESULT([no])
        GRAPHVIZ_MISSING=yes
      else
        AC_MSG_RESULT([$GRAPH_INC_DIR])
      fi
      AC_MSG_CHECKING([for GraphViz library dir])
      GRAPH_LIB_DIR=
      for dir in ${GRAPH_DIR}/lib/graphviz ${GRAPH_DIR}/lib ${GRAPH_DIR}; do
        if test "x" = "x$GRAPH_LIB_DIR"; then
          if test -d $dir; then
            GRAPH_LIB_DIR=-L$dir
          fi
        fi
      done
      if test "x" = x"$GRAPH_LIB_DIR"; then
        AC_MSG_RESULT([no])
        GRAPHVIZ_MISSING=yes
      else
        AC_MSG_RESULT([$GRAPH_LIB_DIR])
      fi
      ;;
  esac

  GRAPH_LIBS="$GRAPH_LIB_DIR -ldotneato -lgraph"
  old_CXXFLAGS="$CXXFLAGS"
  old_CPPFLAGS="$CPPFLAGS"
  CXXFLAGS="$GRAPH_INC_DIR"
  CPPFLAGS="$GRAPH_INC_DIR"
  old_LIBS="$LIBS"
  LIBS=$GRAPH_LIBS
  AC_CHECK_HEADERS([dotneato.h],[],[AC_MSG_WARN([Missing GraphViz header]); GRAPHVIZ_MISSING=yes])
  AC_CHECK_LIB([graph],[aginitlib],[],[AC_MSG_WARN([Cannot find GraphViz library: -lgraph]); GRAPHVIZ_MISSING=yes])
  AC_CHECK_LIB([dotneato],[gvContext],[],[AC_MSG_WARN([Cannot find GraphViz library: -ldotneato]); GRAPHVIZ_MISSING=yes],[-lgraph])
  LIBS="$old_LIBS"
  CXXFLAGS="$old_CXXFLAGS"
  CPPFLAGS="$old_CPPFLAGS"


################################################################################
#                                   X
################################################################################
  AC_PATH_X
  AC_PATH_XTRA
  if test "xyes" = "x$no_x"; then
    X_MISSING=yes
  fi


################################################################################
#                                  VTK
################################################################################
  AC_LANG_SAVE
  AC_LANG_CPLUSPLUS
  
  AC_ARG_WITH([vtk],
  [AC_HELP_STRING([--with-vtk=DIR], [Specify directory containing VTK])],
  [VTK_DIR=$withval
   DISTCHECK_CONFIGURE_FLAGS="$DISTCHECK_CONFIGURE_FLAGS --with-vtk=\"${withval}\""
  ],[VTK_DIR=])

  VTK_INCLUDES=  
  case "x$VTK_DIR" in
    xno)
      VTK_MISSING=yes
      ;;
    xyes|x)
      VTK_LIB_DIR=
      VTK_INC_DIR=
      for dir in /usr/include/vtk /usr/local/include/vtk /include/vtk; do
        if test "x" = "x$VTK_INC_DIR"; then
          AC_CHECK_FILE([${dir}/vtkRenderer.h],[VTK_INC_DIR="-I$dir"])
        fi
      done
      if test x = x"$VTK_INC_DIR"; then
        AC_CHECK_HEADER([vtkRenderer.h],[],
                        [VTK_MISSING=yes])
      else
        VTK_INCLUDES="$VTK_INC_DIR"
      fi
      ;;
    x?*)
      VTK_LIB_DIR=
      VTK_INC_DIR=
      for dir in ${VTK_DIR}/include/vtk ${VTK_DIR}/include ${VTK_DIR}; do
        if test "x" = "x$VTK_INC_DIR"; then
          AC_CHECK_FILE([${dir}/vtkRenderer.h],[VTK_INC_DIR="-I$dir"])
        fi
      done
      if test "x" = "x$VTK_INC_DIR"; then
        # Check for non-installed VTK source
        AC_CHECK_FILE([${VTK_DIR}/Rendering/vtkRenderer.h],[
          for subdir in . Common Filtering GenericFiltering Graphics Hybrid Imaging Parallel Patented Rendering Utilities Utilities/vtkexpat Utilities/expat Utilities/DICOMParser Utilties/vtkpng Utilities/vtkzlib Utilities/freetype/include/freetype Wrapping; do
  	  AC_MSG_CHECKING([for directory ${VTK_DIR}/$subdir])
  	  if test -d ${VTK_DIR}/$subdir; then
  	    VTK_INC_DIR="$VTK_INC_DIR -I${VTK_DIR}/$subdir"
  	    AC_MSG_RESULT([yes])
  	  else
  	    AC_MSG_RESULT([no])
  	  fi
  	done
  	],[VTK_MISSING=yes]
        )
      fi
      VTK_INCLUDES="$VTK_INC_DIR"
      old_LIBS="$LIBS"
      for dir in ${VTK_DIR}/lib/vtk ${VTK_DIR}/lib ${VTK_DIR}/bin ${VTK_DIR}; do
        if test "x" = "x$VTK_LIB_DIR"; then
          LIBS="$old_LIBS -L$dir"
          unset ac_cv_lib_vtkexpat
  	unset ac_cv_lib_vtkexpat_main
          AC_HAVE_LIBRARY([vtkexpat],[VTK_LIB_DIR=$dir])
        fi
      done
      if test "x" = "x$VTK_LIB_DIR"; then
        VTK_MISSING=yes
      fi
      LIBS="$old_LIBS"
      ;;
  esac
  
dnl Define a function that checks for the existence of a library
dnl and if it exists, prepends the corresponding link flag to a 
dnl sepecified variable
dnl Arguments:
dnl  - The library name
dnl  - The name of the variable to which to prepend the library link flag
dnl  - List of extra libraries required for link test
dnl  - Optional library path linker argument (e.g. -L/opt/foo)
  AC_DEFUN([SNL_CHECK_LIB_LIST],[
    old_LIBS="$LIBS"
    LIBS="$4 ${$2} $old_LIBS"
    AC_HAVE_LIBRARY([$1],[$2="-l$1 ${$2}"],[],[$3])
    LIBS="$old_LIBS"
  ])
  
   # These are ordered such that a given library depends only on those libraries
   # that preceed it in the list.
  SNL_CHECK_LIB_LIST([pthread],[vtk_sys_libs])
  SNL_CHECK_LIB_LIST([dl],     [vtk_sys_libs])
  SNL_CHECK_LIB_LIST([m],      [vtk_sys_libs])
  SNL_CHECK_LIB_LIST([gcc],    [vtk_sys_libs])
  x_libs_arg="$X_EXTRA_LIBS -lX11 $X_PRE_LIBS"
  SNL_CHECK_LIB_LIST([Xext],[vtk_x_libs],[$x_libs_arg],[-L$x_libraries]) 
  SNL_CHECK_LIB_LIST([ICE], [vtk_x_libs],[$x_libs_arg],[-L$x_libraries]) 
  SNL_CHECK_LIB_LIST([SM],  [vtk_x_libs],[$x_libs_arg],[-L$x_libraries]) 
  SNL_CHECK_LIB_LIST([Xt],  [vtk_x_libs],[$x_libs_arg],[-L$x_libraries]) 
  SNL_CHECK_LIB_LIST([GL],  [vtk_x_libs],[$x_libs_arg],[-L$x_libraries]) 
  SNL_CHECK_LIB_LIST([GLU], [vtk_x_libs],[$x_libs_arg],[-L$x_libraries]) 
  vtk_libs_arg="-L$x_libraries $vtk_x_libs $X_EXTRA_LIBS -lX11 $X_PRE_LIBS $vtk_sys_libs"
  SNL_CHECK_LIB_LIST([vtkCommon],     [vtk_libs],[$vtk_libs_arg],[-L$VTK_LIB_DIR])
  SNL_CHECK_LIB_LIST([vtkDICOMParser],[vtk_libs],[$vtk_libs_arg],[-L$VTK_LIB_DIR])
  SNL_CHECK_LIB_LIST([vtkfreetype],   [vtk_libs],[$vtk_libs_arg],[-L$VTK_LIB_DIR])
  SNL_CHECK_LIB_LIST([vtkexpat],      [vtk_libs],[$vtk_libs_arg],[-L$VTK_LIB_DIR])
  SNL_CHECK_LIB_LIST([vtkzlib],       [vtk_libs],[$vtk_libs_arg],[-L$VTK_LIB_DIR])
  SNL_CHECK_LIB_LIST([vtkpng],        [vtk_libs],[$vtk_libs_arg],[-L$VTK_LIB_DIR])
  SNL_CHECK_LIB_LIST([vtkjpeg],       [vtk_libs],[$vtk_libs_arg],[-L$VTK_LIB_DIR])
  SNL_CHECK_LIB_LIST([vtktiff],       [vtk_libs],[$vtk_libs_arg],[-L$VTK_LIB_DIR])
  SNL_CHECK_LIB_LIST([vtkftgl],       [vtk_libs],[$vtk_libs_arg],[-L$VTK_LIB_DIR])
  SNL_CHECK_LIB_LIST([vtkFiltering],  [vtk_libs],[$vtk_libs_arg],[-L$VTK_LIB_DIR])
  SNL_CHECK_LIB_LIST([vtkImaging],    [vtk_libs],[$vtk_libs_arg],[-L$VTK_LIB_DIR])
  SNL_CHECK_LIB_LIST([vtkGraphics],   [vtk_libs],[$vtk_libs_arg],[-L$VTK_LIB_DIR])
  SNL_CHECK_LIB_LIST([vtkIO],         [vtk_libs],[$vtk_libs_arg],[-L$VTK_LIB_DIR])
  SNL_CHECK_LIB_LIST([vtkRendering],  [vtk_libs],[$vtk_libs_arg],[-L$VTK_LIB_DIR])
  SNL_CHECK_LIB_LIST([vtkParallel],   [vtk_libs],[$vtk_libs_arg],[-L$VTK_LIB_DIR])
  
   # Make sure we found at least vtkCommon and vtkRendering
  if ! echo "x $vtk_libs" | grep lvtkCommon >/dev/null; then
    AC_MSG_WARN("VTK library 'vtkCommon' not found.")
    VTK_MISSING=yes
  fi
  if ! echo "x $vtk_libs" | grep lvtkRendering >/dev/null; then
    AC_MSG_WARN("VTK library 'vtkRendering' not found.")
    VTK_MISSING=yes
  fi
  
  AC_LANG_RESTORE
  
  
################################################################################
#                                   QT
################################################################################
  AC_LANG_SAVE
  AC_LANG_CPLUSPLUS
  AC_ARG_VAR([QTDIR],[QT installation directory])
  if test x"$QTDIR" = x; then
    search_path="$PATH"
    qlibdir=
    incdir=
    for dir in /usr/include/qt3 /usr/local/include/qt3 /include/qt3; do
      if test x = x${incdir}; then
        if test -d $dir; then
          incdir=-I$dir
        fi
      fi
    done
  else
    search_path="${QTDIR}/bin"
    qlibdir="-L${QTDIR}/lib"
    incdir="-I${QTDIR}/include"
  fi
  
  AC_PATH_PROG([MOC],[moc],[],[$search_path])
  if test x = x"$MOC";then
    AC_MSG_WARN([Cannot find moc (Qt meta object compiler)])
    QT_MISSING=yes
  fi
  AC_SUBST(MOC)
  AC_PATH_PROG([UIC],[uic],[],[$search_path])
  if test x = x"$UIC";then
    AC_MSG_WARN([Cannot find uic (Qt user interface compiler)])
    QT_MISSING=yes
  fi
  AC_SUBST(UIC)
  
  old_CXXFLAGS="$CXXFLAGS"
  old_CPPFLAGS="$CPPFLAGS"
  CXXFLAGS="$incdir"
  CPPFLAGS="$incdir"
  AC_CHECK_HEADERS([qlineedit.h qevent.h qapplication.h \
                    qwidget.h qtimer.h qpixmap.h qwidgetplugin.h \
                    qobject.h qmetaobject.h],[],
                   [QT_MISSING=yes])
  CXXFLAGS="$old_CXXFLAGS"
  CPPFLAGS="$old_CPPFLAGS"
  QT_INCLUDES="$incdir"
  
  old_LIBS="$LIBS"
  LIBS="$LIBS $qlibdir"
  # Cannot use AC_HAVE_LIBRARY for qt-mt because of
  # autoconf bug with libraries that have a '-' in their name.
  #AC_HAVE_LIBRARY([qt-mt],[QT_LIBS="$qlibdir -lqt-mt"],[
  AC_MSG_CHECKING([for main in -lqt-mt])
  QT_LIBS="$qlibdir -lqt-mt"
  AC_TRY_LINK_FUNC(main,[AC_MSG_RESULT([yes])],[
    AC_MSG_RESULT([no])
    LIBS="$old_LIBS $qlibdir"
    AC_HAVE_LIBRARY([qt],[QT_LIBS="$qlibdir -lqt"],[
      QT_MISSING=yes
    ])
  ])
  LIBS="$old_LIBS"
  
################################################################################
#                                 X/VTK/QT
################################################################################
  dnl Merge lists of libraries
  dnl Arguments
  dnl  - name of output variable
  dnl  - first list
  dnl  - second list
  AC_DEFUN([SNL_MERGE_LISTS],[
    $1="$2"
    # Reverse list two
    for item3 in $3; do 
      found=no
      for item2 in $2; do
        if test "x$item2" = "x$item3"; then found=yes; fi
      done
      if test "$found" = "no"; then $1="${$1} $item3"; fi
    done
    $1="${$1} $2"
  ])
  SNL_MERGE_LISTS([XLIBS_tmp],[$X_EXTRA_LIBS -lX11 $X_PRE_LIBS],[$vtk_x_libs])
  SNL_MERGE_LISTS([XLIBS],[$vtk_sys_libs],[$XLIBS_tmp])
  QVDUAL_LIBS="$LIBS $GRAPH_LIBS -L$VTK_LIB_DIR $vtk_libs $QT_LIBS $XLIBS"
  QVDUAL_INCLUDES="$GRAPH_INC_DIR $VTK_INCLUDES $QT_INCLUDES"
  AC_SUBST(VTK_LIB_DIR)
  AC_SUBST(QVDUAL_LIBS)
  AC_SUBST(QVDUAL_INCLUDES)
fi

################################################################################
#                           Output Files
################################################################################
AC_SUBST([INCLUDES])
AC_SUBST([DEFINES])
AC_SUBST([DISTCHECK_CONFIGURE_FLAGS])

AC_CONFIG_FILES([Makefile 
                 moab.make 
                 testdir.h
                 mhdf/Makefile
                 test/Makefile
                 test/h5file/Makefile
                 test/dual/Makefile
                 test/obb/Makefile
                 tools/Makefile
                 tools/converter/Makefile
                 tools/hexmodops/Makefile
                 tools/mbperf/Makefile
                 tools/mbchaco/Makefile
		 tools/mbzoltan/Config.moab
                 tools/mbzoltan/Makefile
                 tools/qvdual/Makefile
                 tools/size/Makefile
                 tools/skin/Makefile
                 tools/tagprop/Makefile
                 tools/spheredecomp/Makefile
                 tools/surfplot/Makefile
                 doc/Makefile
                 doxygen/Makefile
                 ])

AC_OUTPUT

AC_MSG_RESULT([C:   $CC $CFLAGS])
AC_MSG_RESULT([C++: $CXX $CXXFLAGS])


if test "x$GRAPHVIZ_MISSING" = "xyes"; then
  AC_MSG_WARN([Could not find GraphViz library.  Build will FAIL!!! Try \"--with-graphviz=DIR\"])
fi
if test "x$X_MISSING" = "xyes"; then
  AC_MSG_WARN([Cound not find X client.  Build will FAIL!!!])
else
  if test "x$QT_MISSING" = "xyes"; then
    AC_MSG_WARN([Cound not find QT.  Build will FAIL!!! Try setting \"QTDIR\"])
  fi
  if test "x$VTK_MISSING" = "xyes"; then
    AC_MSG_WARN([Count not find VTK.  Build will FAIL!!! Try \"--with-VTK=DIR\"])
  fi
fi
